--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -36,6 +36,7 @@
     "from pathlib import Path\n",
     "import logging\n",
     "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "logger = logging.getLogger(__name__)"
    ]
@@ -47,6 +48,47 @@
    "outputs": [],
    "source": [
     "# | export\n",
+    "\n",
+    "def get_average_objects(clusters, kind):\n",
+    "    \"\"\"Create the average object out of a sequence of clusters.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    clusters : sequence of pandas.DataFrames\n",
+    "        table with rows of markings (fans or blotches) to be averaged\n",
+    "    kind : {'fan', 'blotch}\n",
+    "        Switch to control the circularity for the average angle calculation.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Generator providing single row pandas.DataFrames with the average values\n",
+    "    \"\"\"\n",
+    "    logger.debug(\"Averaging clusters with kind = %s.\", kind)\n",
+    "    for cluster_df in clusters:\n",
+    "        # first filter for outliers more than 1 std away\n",
+    "        # for\n",
+    "        # reduced = df[df.apply(lambda x: np.abs(x - x.mean()) / x.std() < 1).all(axis=1)]\n",
+    "        logger.debug(\"Averaging %i objects.\", len(cluster_df))\n",
+    "        logger.debug(\"x.mean: %f\", cluster_df.x.mean())\n",
+    "        logger.debug(\"y.mean: %f\", cluster_df.y.mean())\n",
+    "        meandata = cluster_df.mean(numeric_only=True)\n",
+    "        # this determines the upper limit for circular mean\n",
+    "        high = 180 if kind == \"blotch\" else 360\n",
+    "        meandata.angle = circmean(cluster_df.angle, high=high)\n",
+    "        meandata[\"angle_std\"] = circstd(cluster_df.angle, high=high)\n",
+    "        meandata[\"n_votes\"] = len(cluster_df)\n",
+    "        meandata[\"x_std\"] = cluster_df.x.std()\n",
+    "        meandata[\"y_std\"] = cluster_df.y.std()\n",
+    "        if kind == \"fan\":\n",
+    "            meandata[\"distance_std\"] = cluster_df.distance.std()\n",
+    "            meandata[\"spread_std\"] = cluster_df.spread.std()\n",
+    "        elif kind == 'blotch':\n",
+    "            meandata[\"radius1_std\"] = cluster_df.radius_1.std()\n",
+    "            meandata[\"radius2_std\"] = cluster_df.radius_2.std()\n",
+    "\n",
+    "        yield meandata.to_frame().T\n",
+    "\n",
+    "\n",
     "\n",
     "def plot_results(p4id, labels, data=None, kind=None, reduced_data=None, ax=None):\n",
     "    functions = dict(blotch=p4id.plot_blotches, fan=p4id.plot_fans)\n",
@@ -63,6 +105,7 @@
     "    # pick correct function for kind of marking:\n",
     "    if any(reduced_data):\n",
     "        functions[kind](ax=ax, data=reduced_data, lw=1, with_center=True)\n",
+    "\n",
     "\n"
    ]
   },
