fix imports and missing functions

--- a/notebooks/05b_production.markings.ipynb
+++ b/notebooks/05b_production.markings.ipynb
@@ -257,7 +257,11 @@
     "        if savedir is not None:\n",
     "            savepath = savedir / f\"{self.imgid}.png\"\n",
     "            fig.savefig(savepath, dpi=150)\n",
-    "\n"
+    "\n",
+    "\n",
+    "def calc_blotchiness(nfans, nblotches):\n",
+    "    \"\"\"Calculate the fnotch value (or fan-ness).\"\"\"\n",
+    "    return (nblotches) / (nfans + nblotches)"
    ]
   },
   {
