--- a/notebooks/05f_production.fnotching.ipynb
+++ b/notebooks/05f_production.fnotching.ipynb
@@ -166,6 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | export\n",
+    "\n",
     "def fnotch_image_ids(obsid, eps=20, savedir=None, scope=\"hirise\"):\n",
     "    \"Cluster each image_id for an obsid separately.\"\n",
     "    # the clustering results were stored as L1A products\n",
