--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "['ESP_021455_0935']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23276cb88965456c8a1deb711d779527",
+       "model_id": "8bd919d4ae284975b0750b967c148110",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1070,22 +1070,42 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'get_average_objects' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[48], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Finally Launch the production pipeline\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mrm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlaunch_catalog_production\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[44], line 375\u001b[0m, in \u001b[0;36mReleaseManager.launch_catalog_production\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    373\u001b[0m LOGGER\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPerforming the clustering.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    374\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShould Log before\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 375\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mcluster_obsid_parallel\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtodo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcatalog\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdbname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    377\u001b[0m \u001b[38;5;66;03m# create marking_ids\u001b[39;00m\n\u001b[1;32m    378\u001b[0m fan_id \u001b[38;5;241m=\u001b[39m fan_id_generator()\n",
-      "Cell \u001b[0;32mIn[41], line 54\u001b[0m, in \u001b[0;36mcluster_obsid_parallel\u001b[0;34m(obsids, savedir, dbname)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m obsid \u001b[38;5;129;01min\u001b[39;00m obsids:\n\u001b[1;32m     53\u001b[0m     lazys\u001b[38;5;241m.\u001b[39mappend(delayed(cluster_obsid)(obsid, savedir, dbname\u001b[38;5;241m=\u001b[39mdbname))\n\u001b[0;32m---> 54\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mlazys\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.miniforge3/envs/planetary/lib/python3.9/site-packages/dask/base.py:661\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(traverse, optimize_graph, scheduler, get, *args, **kwargs)\u001b[0m\n\u001b[1;32m    658\u001b[0m     postcomputes\u001b[38;5;241m.\u001b[39mappend(x\u001b[38;5;241m.\u001b[39m__dask_postcompute__())\n\u001b[1;32m    660\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m shorten_traceback():\n\u001b[0;32m--> 661\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mschedule\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdsk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    663\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m repack([f(r, \u001b[38;5;241m*\u001b[39ma) \u001b[38;5;28;01mfor\u001b[39;00m r, (f, a) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(results, postcomputes)])\n",
-      "Cell \u001b[0;32mIn[40], line 27\u001b[0m, in \u001b[0;36mcluster_obsid\u001b[0;34m(obsid, savedir, imgid, dbname)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# cluster\u001b[39;00m\n\u001b[1;32m     26\u001b[0m dbscanner \u001b[38;5;241m=\u001b[39m dbscan\u001b[38;5;241m.\u001b[39mDBScanner(savedir\u001b[38;5;241m=\u001b[39msavedir, dbname\u001b[38;5;241m=\u001b[39mdbname)\n\u001b[0;32m---> 27\u001b[0m \u001b[43mdbscanner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcluster_image_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobsid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obsid\n",
-      "File \u001b[0;32m~/Dropbox/masters_tom_ihro/Programming/Packages/p4tools/p4tools/production/dbscan.py:287\u001b[0m, in \u001b[0;36mDBScanner.cluster_image_name\u001b[0;34m(self, image_name, msf, eps_values)\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m image_id \u001b[38;5;129;01min\u001b[39;00m tqdm(image_ids):\n\u001b[1;32m    286\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpm\u001b[38;5;241m.\u001b[39mid \u001b[38;5;241m=\u001b[39m image_id\n\u001b[0;32m--> 287\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcluster_image_id\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmsf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage_name\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Dropbox/masters_tom_ihro/Programming/Packages/p4tools/p4tools/production/dbscan.py:359\u001b[0m, in \u001b[0;36mDBScanner.cluster_image_id\u001b[0;34m(self, img_id, msf, eps_values, image_name)\u001b[0m\n\u001b[1;32m    357\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m    358\u001b[0m \u001b[38;5;66;03m# cluster first with the parameters for small objects\u001b[39;00m\n\u001b[0;32m--> 359\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_setup_and_call_clustering\u001b[49m\u001b[43m(\u001b[49m\u001b[43meps_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msmall\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    360\u001b[0m \u001b[38;5;66;03m# self.remaining was created during previous call.\u001b[39;00m\n\u001b[1;32m    361\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mremaining) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmin_samples \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdo_large_run \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    362\u001b[0m     \u001b[38;5;66;03m# if we allow it, and more than min_samples are left, do 2nd round\u001b[39;00m\n\u001b[1;32m    363\u001b[0m     \u001b[38;5;66;03m# with parameters for large objects\u001b[39;00m\n",
-      "File \u001b[0;32m~/Dropbox/masters_tom_ihro/Programming/Packages/p4tools/p4tools/production/dbscan.py:391\u001b[0m, in \u001b[0;36mDBScanner._setup_and_call_clustering\u001b[0;34m(self, eps_values, dataset, kind, size)\u001b[0m\n\u001b[1;32m    388\u001b[0m eps_rad \u001b[38;5;241m=\u001b[39m eps_values[kind][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mradius\u001b[39m\u001b[38;5;124m\"\u001b[39m][size]\n\u001b[1;32m    389\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLength of dataset: \u001b[39m\u001b[38;5;132;01m%i\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(dataset))\n\u001b[1;32m    390\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreduced_data[kind]\u001b[38;5;241m.\u001b[39mappend(\n\u001b[0;32m--> 391\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cluster_pipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps_xy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps_rad\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    392\u001b[0m )\n\u001b[1;32m    393\u001b[0m logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAppending \u001b[39m\u001b[38;5;132;01m%i\u001b[39;00m\u001b[38;5;124m items to final_clusters\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinalclusters))\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_clusters[kind]\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinalclusters)\n",
-      "File \u001b[0;32m~/Dropbox/masters_tom_ihro/Programming/Packages/p4tools/p4tools/production/dbscan.py:432\u001b[0m, in \u001b[0;36mDBScanner._cluster_pipeline\u001b[0;34m(self, kind, data, eps, eps_rad)\u001b[0m\n\u001b[1;32m    430\u001b[0m finalclusters \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(finalclusters)\n\u001b[1;32m    431\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinalclusters \u001b[38;5;241m=\u001b[39m finalclusters\n\u001b[0;32m--> 432\u001b[0m averaged \u001b[38;5;241m=\u001b[39m \u001b[43mget_average_objects\u001b[49m(finalclusters, kind)\n\u001b[1;32m    433\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    434\u001b[0m     reduced_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat(averaged, ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, sort\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_average_objects' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  1.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created /home/tihro/Dropbox/masters_tom_ihro/Data/P4_catalog_p4tools_test/P4_catalog_p4tools_test_L1C_cut_0.5_fan.csv.\n",
+      "Created /home/tihro/Dropbox/masters_tom_ihro/Data/P4_catalog_p4tools_test/P4_catalog_p4tools_test_L1C_cut_0.5_blotch.csv.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 65.95it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling do_campt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:12<00:00, 12.88s/it]\n",
+      "/tmp/ipykernel_107328/2466343027.py:166: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  return all_data.groupby(\"image_name\").image_id.nunique()\n"
      ]
     }
    ],
