changed to multiprocessing

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -174,6 +174,9 @@
    "source": [
     "# | export\n",
     "\n",
+    "import multiprocessing\n",
+    "import multiprocessing.pool\n",
+    "\n",
     "def fnotch_obsid(obsid=None, savedir=None, fnotch_via_obsid=False, imgid=None):\n",
     "    \"\"\"\n",
     "    fnotch_via_obsid: bool, optional\n",
@@ -222,10 +225,18 @@
     "    dbname : str\n",
     "        The databasename \n",
     "    \"\"\"\n",
-    "    lazys = []\n",
-    "    for obsid in obsids:\n",
-    "        lazys.append(delayed(cluster_obsid)(obsid, savedir, dbname=dbname))\n",
-    "    return compute(*lazys)\n",
+    "\n",
+    "    helpfunc = lambda x: cluster_obsid(x,savedir,dbname=dbname)\n",
+    "\n",
+    "    with multiprocessing.Pool(4) as pool:\n",
+    "\n",
+    "        test = pool.map(helpfunc,obsids)\n",
+    "    \n",
+    "    # lazys = []\n",
+    "    # for obsid in obsids:\n",
+    "    #     lazys.append(delayed(cluster_obsid)(obsid, savedir, dbname=dbname))\n",
+    "    # return compute(*lazys)\n",
+    "    return test\n",
     "\n"
    ]
   },
