--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -471,7 +471,7 @@
     "            self.dbname = Path(get_latest_cleaned_db())\n",
     "        else:\n",
     "            self.dbname = Path(dbname)\n",
-    "        self.df = dd.read_parquet(self.dbname)\n",
+    "        self.df = pd.read_parquet(self.dbname)\n",
     "\n",
     "    def __repr__(self):\n",
     "        s = \"Database root: {}\\n\".format(Path(self.dbname).parent)\n",
@@ -501,7 +501,7 @@
     "\n",
     "    def get_obsid_for_tile_id(self, tile_id):\n",
     "        tile_id = check_and_pad_id(tile_id)\n",
-    "        obsid = self.df[self.df.image_id == tile_id].image_name.compute().iloc[0]\n",
+    "        obsid = self.df[self.df.image_id == tile_id].image_name.iloc[0]\n",
     "        return obsid\n",
     "\n",
     "    def set_latest_with_dupes_db(self, datadir=None):\n",
@@ -519,12 +519,12 @@
     "        --------\n",
     "        get_image_names_from_db\n",
     "        \"\"\"\n",
-    "        return self.df.image_name.unique().compute()\n",
+    "        return self.df.image_name.unique()\n",
     "\n",
     "    @property\n",
     "    def image_ids(self):\n",
     "        \"Return list of unique image_ids in database.\"\n",
-    "        return self.df.image_id.unique().compute()\n",
+    "        return self.df.image_id.unique()\n",
     "\n",
     "    @property\n",
     "    def n_image_ids(self):\n",
@@ -541,7 +541,7 @@
     "\n",
     "    def get_obsid_markings(self, obsid):\n",
     "        \"Return marking data for given HiRISE obsid.\"\n",
-    "        return self.df[self.df.image_name == obsid].compute()\n",
+    "        return self.df[self.df.image_name == obsid]\n",
     "\n",
     "    def get_image_name_markings(self, image_name):\n",
     "        \"Alias for get_obsid_markings.\"\n",
@@ -596,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.undefined"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
