fixed distributing the loop, and the tqdm

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -146,7 +146,7 @@
     "# | export\n",
     "\n",
     "# other imports\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm.autonotebook import tqdm\n",
     "import pandas as pd\n",
     "import logging\n",
     "import itertools\n",
@@ -841,12 +841,16 @@
     "            total = len(self.obsids)\n",
     "            #adding 1 to the loop amount is important to finish up the leftovers that dont fit in total/n_workers\n",
     "            # Example total = 10; n_workers = 3 => 10/3 = 3 meaning 3 loops until 0:3, 3:6, 6:9 , missing the last one 10\n",
-    "            loop_full = int(np.floor(total/n_workers)) + 1 \n",
+    "            if total%n_workers == 0:\n",
+    "                loop_full = int(total/n_workers)\n",
+    "            else:\n",
+    "                loop_full = int(np.floor(total/n_workers)) + 1 \n",
+    "\n",
     "            for i in tqdm(range(loop_full)):\n",
     "                try: \n",
-    "                    temp_obsids = self.obsids[3*i:3*i+3]\n",
+    "                    temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
     "                except:\n",
-    "                    temp_obsids = self.obsids[3*i:]\n",
+    "                    temp_obsids = self.obsids[n_workers*i:]\n",
     "                _ = cluster_obsid_parallel(temp_obsids, self.catalog, self.dbname)\n",
     "    \n",
     "            # create marking_ids\n",
@@ -861,9 +865,10 @@
     "            LOGGER.info(\"Start fnotching\")\n",
     "            for i in tqdm(range(loop_full)):\n",
     "                try: \n",
-    "                    temp_obsids = self.obsids[3*i:3*i+3]\n",
+    "                    temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
     "                except:\n",
-    "                    temp_obsids = self.obsids[3*i:]\n",
+    "                    temp_obsids = self.obsids[n_workers*i:]\n",
+    "\n",
     "                _ = fnotch_obsid_parallel(temp_obsids, self.catalog)\n",
     "\n",
     "        # create summary CSV files of the clustering output\n",
@@ -873,9 +878,9 @@
     "        LOGGER.info(\"Creating the required RED45 mosaics for ground projections.\")\n",
     "        for i in tqdm(range(loop_full)):\n",
     "            try: \n",
-    "                temp_obsids = self.obsids[3*i:3*i+3]\n",
+    "                temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
     "            except:\n",
-    "                temp_obsids = self.obsids[3*i:]\n",
+    "                temp_obsids = self.obsids[n_workers*i:]\n",
     "            _ = execute_in_parallel(create_RED45_mosaic, temp_obsids)\n",
     "\n",
     "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
