--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -36,7 +36,7 @@
     "from pathlib import Path\n",
     "import logging\n",
     "import pandas as pd\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm.autonotebook import tqdm\n",
     "\n",
     "logger = logging.getLogger(__name__)"
    ]
@@ -631,7 +631,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.-1"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
