removed alias function get_image_name_markings

--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -543,16 +543,12 @@
     "        \"Return marking data for given HiRISE obsid.\"\n",
     "        return self.df[self.df.image_name == obsid]\n",
     "\n",
-    "    def get_image_name_markings(self, image_name):\n",
-    "        \"Alias for get_obsid_markings.\"\n",
-    "        return self.get_obsid_markings(image_name)\n",
-    "\n",
     "    def get_image_id_markings(self, image_id, obsid=None):\n",
     "        \"Return marking data for one Planet4 image_id\"\n",
     "        image_id = check_and_pad_id(image_id)\n",
     "        if obsid is None:\n",
     "            obsid = self.get_obsid_for_tile_id(image_id)\n",
-    "        data = self.get_image_name_markings(obsid)\n",
+    "        data = self.get_obsid_markings(obsid)\n",
     "        return data.query(\"image_id==@image_id\")\n",
     "\n",
     "    def get_data_for_obsids(self, obsids):\n",
