fixed error where get_image_name_markings weren't replaced by get_obsid_markings

--- a/notebooks/05d_production.projection.ipynb
+++ b/notebooks/05d_production.projection.ipynb
@@ -343,7 +343,7 @@
     "        self.cubepath = Path(cubepath)\n",
     "        db = io.DBManager(dbname)\n",
     "        if read_data:\n",
-    "            self.data = db.get_image_name_markings(self.img_name)\n",
+    "            self.data = db.get_obsid_markings(self.img_name)\n",
     "\n",
     "    @property\n",
     "    def img_name(self):\n",
