--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -355,7 +355,7 @@
     "\n",
     "        logger.info(\"Clustering image_name %s with msf of %f.\", image_name, self.msf)\n",
     "        db = io.DBManager(self.dbname)\n",
-    "        data = db.get_image_name_markings(image_name)\n",
+    "        data = db.get_obsid_markings(image_name)\n",
     "        image_ids = data.image_id.unique()\n",
     "        logger.debug(\"Number of image_ids found: %i\", len(image_ids))\n",
     "        for image_id in tqdm(image_ids):\n",
