Change tqdm to auto

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -146,7 +146,7 @@
     "# | export\n",
     "\n",
     "# other imports\n",
-    "from tqdm.autonotebook import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "import pandas as pd\n",
     "import logging\n",
     "import itertools\n",
@@ -828,18 +828,18 @@
     "    def perform_clustering(self):\n",
     "        lazy_results = []\n",
     "\n",
-    "    def launch_catalog_production(self, n_workers : int = 3):\n",
+    "    def launch_catalog_production(self, max_tasks : int = 3):\n",
     "        # check for data that is unprocessed\n",
     "        self.check_for_todo()\n",
     "\n",
-    "        #Simple trick to avoid loading to many parallely into the thread\n",
+    "        #Simple trick to start too many tasks at the same time which all load a large DB.\n",
     "        total = len(self.obsids)\n",
     "        #adding 1 to the loop amount is important to finish up the leftovers that dont fit in total/n_workers\n",
     "        # Example total = 10; n_workers = 3 => 10/3 = 3 meaning 3 loops until 0:3, 3:6, 6:9 , missing the last one 10\n",
-    "        if total%n_workers == 0:\n",
-    "            loop_full = int(total/n_workers)\n",
+    "        if total%max_tasks == 0:\n",
+    "            loop_full = int(total/max_tasks)\n",
     "        else:\n",
-    "            loop_full = int(np.floor(total/n_workers)) + 1 \n",
+    "            loop_full = int(np.floor(total/max_tasks)) + 1 \n",
     "\n",
     "        # perform the clustering\n",
     "        if len(self.todo) > 0:\n",
@@ -847,9 +847,9 @@
     "            #results = cluster_obsid_parallel(self.todo, self.catalog, self.dbname)\n",
     "            for i in tqdm(range(loop_full)):\n",
     "                try: \n",
-    "                    temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
+    "                    temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "                except:\n",
-    "                    temp_obsids = self.obsids[n_workers*i:]\n",
+    "                    temp_obsids = self.obsids[max_tasks*i:]\n",
     "                _ = cluster_obsid_parallel(temp_obsids, self.catalog, self.dbname)\n",
     "    \n",
     "            # create marking_ids\n",
@@ -864,9 +864,9 @@
     "            LOGGER.info(\"Start fnotching\")\n",
     "            for i in tqdm(range(loop_full)):\n",
     "                try: \n",
-    "                    temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
+    "                    temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "                except:\n",
-    "                    temp_obsids = self.obsids[n_workers*i:]\n",
+    "                    temp_obsids = self.obsids[max_tasks*i:]\n",
     "\n",
     "                _ = fnotch_obsid_parallel(temp_obsids, self.catalog)\n",
     "\n",
@@ -877,9 +877,9 @@
     "        LOGGER.info(\"Creating the required RED45 mosaics for ground projections.\")\n",
     "        for i in tqdm(range(loop_full)):\n",
     "            try: \n",
-    "                temp_obsids = self.obsids[n_workers*i:n_workers*i+n_workers]\n",
+    "                temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "            except:\n",
-    "                temp_obsids = self.obsids[n_workers*i:]\n",
+    "                temp_obsids = self.obsids[max_tasks*i:]\n",
     "            _ = execute_in_parallel(create_RED45_mosaic, temp_obsids)\n",
     "\n",
     "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
