--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -36,7 +36,7 @@
     "from pathlib import Path\n",
     "import logging\n",
     "import pandas as pd\n",
-    "from tqdm.autonotebook import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "logger = logging.getLogger(__name__)"
    ]
