--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -845,7 +845,7 @@
     "        if len(self.todo) > 0:\n",
     "            LOGGER.info(\"Performing the clustering.\")\n",
     "            #results = cluster_obsid_parallel(self.todo, self.catalog, self.dbname)\n",
-    "            for i in tqdm(range(loop_full)):\n",
+    "            for i in range(loop_full):\n",
     "                try: \n",
     "                    temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "                except:\n",
@@ -862,7 +862,7 @@
     "\n",
     "            # fnotch and apply cuts\n",
     "            LOGGER.info(\"Start fnotching\")\n",
-    "            for i in tqdm(range(loop_full)):\n",
+    "            for i in range(loop_full):\n",
     "                try: \n",
     "                    temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "                except:\n",
@@ -875,7 +875,7 @@
     "        create_roi_file(self.obsids, self.catalog, self.catalog)\n",
     "\n",
     "        LOGGER.info(\"Creating the required RED45 mosaics for ground projections.\")\n",
-    "        for i in tqdm(range(loop_full)):\n",
+    "        for i in range(loop_full):\n",
     "            try: \n",
     "                temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
     "            except:\n",
@@ -894,13 +894,6 @@
     "        # merging metadata\n",
     "        self.merge_all()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
