--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -358,7 +358,7 @@
     "        data = db.get_obsid_markings(image_name)\n",
     "        image_ids = data.image_id.unique()\n",
     "        logger.debug(\"Number of image_ids found: %i\", len(image_ids))\n",
-    "        for image_id in tqdm(image_ids):\n",
+    "        for image_id in tqdm(image_ids,desc=image_name):\n",
     "            self.pm.id = image_id\n",
     "            self.cluster_image_id(image_id, msf, eps_values, image_name)\n",
     "\n",
