--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -772,7 +772,8 @@
     "            axis=1,\n",
     "            inplace=True,\n",
     "        )\n",
-    "        fans[self.FAN_COLUMNS_AS_PUBLISHED].to_csv(self.fan_merged, index=False)\n",
+    "        fans[self.FAN_COLUMNS_AS_PUBLISHED].to_csv(self.fan_merged, index=False, mode = \"a\")\n",
+    "\n",
     "        LOGGER.info(\"Wrote %s\", str(self.fan_merged))\n",
     "\n",
     "        # write out blotches catalog\n",
@@ -787,7 +788,7 @@
     "            inplace=True,\n",
     "        )\n",
     "        blotches[self.BLOTCH_COLUMNS_AS_PUBLISHED].to_csv(\n",
-    "            self.blotch_merged, index=False\n",
+    "            self.blotch_merged, index=False, mode = \"a\"\n",
     "        )\n",
     "        LOGGER.info(\"Wrote %s\", str(self.blotch_merged))\n",
     "\n",
@@ -828,7 +829,7 @@
     "    def perform_clustering(self):\n",
     "        lazy_results = []\n",
     "\n",
-    "    def launch_catalog_production(self, max_tasks : int = 3):\n",
+    "    def launch_catalog_production(self, max_tasks : int = 10):\n",
     "        # check for data that is unprocessed\n",
     "        self.check_for_todo()\n",
     "\n",
@@ -882,6 +883,44 @@
     "                temp_obsids = self.obsids[max_tasks*i:]\n",
     "            _ = execute_in_parallel(create_RED45_mosaic, temp_obsids)\n",
     "\n",
+    "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
+    "        self.calc_tile_coordinates()\n",
+    "\n",
+    "        LOGGER.info(\"Calculating ground coordinates for catalog.\")\n",
+    "        self.calc_marking_coordinates()\n",
+    "\n",
+    "        # calculate all metadata required for P4 analysis\n",
+    "        LOGGER.info(\"Writing summary metadata file.\")\n",
+    "        self.calc_metadata()\n",
+    "        # merging metadata\n",
+    "        self.merge_all()\n",
+    "\n",
+    "    def launch_serial_production(self):\n",
+    "        self.check_for_todo()\n",
+    "\n",
+    "        fan_id = fan_id_generator()\n",
+    "        blotch_id = blotch_id_generator()\n",
+    "\n",
+    "        for obsid in self.obsids:\n",
+    "\n",
+    "            LOGGER.info(f\"Performing the Clustering for {obsid}\")\n",
+    "            if len(self.todo) > 0:\n",
+    "                cluster_obsid(obsid,self.catalog,dbname=self.dbname)\n",
+    "\n",
+    "                paths = get_L1A_paths(obsid, self.catalog)\n",
+    "                for path in paths:\n",
+    "                    add_marking_ids(path, fan_id, blotch_id)\n",
+    "\n",
+    "                LOGGER.info(f\"Start fnotching for {obsid}\")\n",
+    "                fnotch_obsid(obsid,savedir=self.catalog,dbname=self.dbname)\n",
+    "\n",
+    "                create_RED45_mosaic(obsid)\n",
+    "\n",
+    "        LOGGER.info(\"Creating L1C fan and blotch database files.\")\n",
+    "        create_roi_file(self.obsids, self.catalog, self.catalog)\n",
+    "\n",
+    "\n",
+    "        \n",
     "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
     "        self.calc_tile_coordinates()\n",
     "\n",
