--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -912,7 +912,7 @@
     "                    add_marking_ids(path, fan_id, blotch_id)\n",
     "\n",
     "                LOGGER.info(f\"Start fnotching for {obsid}\")\n",
-    "                fnotch_obsid(obsid,savedir=self.catalog,dbname=self.dbname)\n",
+    "                fnotch_obsid(obsid,savedir=self.catalog)\n",
     "\n",
     "                create_RED45_mosaic(obsid)\n",
     "\n",
