--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -901,7 +901,7 @@
     "        fan_id = fan_id_generator()\n",
     "        blotch_id = blotch_id_generator()\n",
     "\n",
-    "        for obsid in self.obsids:\n",
+    "        for obsid in self.todo:\n",
     "\n",
     "            LOGGER.info(f\"Performing the Clustering for {obsid}\")\n",
     "            if len(self.todo) > 0:\n",
