added an option to dbmanager to filter out for 1 obsid and not load the entire parquet file.

--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -458,7 +458,7 @@
     "\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, dbname=None):\n",
+    "    def __init__(self, dbname=None, obsid = None):\n",
     "        \"\"\"Initialize DBManager class.\n",
     "\n",
     "        Parameters\n",
@@ -469,6 +469,9 @@
     "        \"\"\"\n",
     "        if dbname is None:\n",
     "            self.dbname = Path(get_latest_cleaned_db())\n",
+    "        elif obsid != None:\n",
+    "            sel = [(\"image_name\",\"=\",obsid)]\n",
+    "            self.df = pd.read_parquet(self.dbname,filters = sel)\n",
     "        else:\n",
     "            self.dbname = Path(dbname)\n",
     "        self.df = pd.read_parquet(self.dbname)\n",
