Read only one obsid from parquet file.

--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -469,12 +469,14 @@
     "        \"\"\"\n",
     "        if dbname is None:\n",
     "            self.dbname = Path(get_latest_cleaned_db())\n",
-    "        elif obsid != None:\n",
+    "        else:\n",
+    "            self.dbname = Path(dbname)\n",
+    "        \n",
+    "        if obsid != None:\n",
     "            sel = [(\"image_name\",\"=\",obsid)]\n",
     "            self.df = pd.read_parquet(self.dbname,filters = sel)\n",
     "        else:\n",
-    "            self.dbname = Path(dbname)\n",
-    "        self.df = pd.read_parquet(self.dbname)\n",
+    "            self.df = pd.read_parquet(self.dbname)\n",
     "\n",
     "    def __repr__(self):\n",
     "        s = \"Database root: {}\\n\".format(Path(self.dbname).parent)\n",
