Added seperate launch_parallel function

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -753,10 +753,22 @@
     "        self.calc_metadata()\n",
     "        # merging metadata\n",
     "        self.merge_all()\n",
+    "    \n",
+    "    def launch_parallel_production(self,parallel_tasks : int = 10):\n",
+    "        \n",
+    "        self.check_for_todo()\n",
+    "        \n",
+    "        fan_id = fan_id_generator()\n",
+    "        blotch_id = blotch_id_generator()\n",
+    "\n",
     "\n",
     "    \n",
     "    def launch_serial_production(self):\n",
+    "        \"\"\"The Method for starting the production of the catalogue in a serial manner. Doing one OBSID at a time.\n",
+    "        \"\"\"\n",
     "        self.check_for_todo()\n",
+    "\n",
+    "        \n",
     "\n",
     "        fan_id = fan_id_generator()\n",
     "        blotch_id = blotch_id_generator()\n",
