split the parallel functionality into a different launch_catalog_production method and let launch_catalog_production call either serial or parallel.

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -708,39 +708,56 @@
     "        blotches = blotches.merge(ground[self.COLS_TO_MERGE], on=INDEX)\n",
     "        return fans, blotches\n",
     "\n",
-    "    def launch_catalog_production(self):\n",
-    "        # check for data that is unprocessed\n",
+    "    def launch_catalog_production(self,kind : str = \"serial\", parallel_tasks : int = 10):\n",
+    "\n",
+    "        if kind == \"serial\":\n",
+    "            self.launch_serial_production()\n",
+    "        \n",
+    "        if kind == \"parallel\":\n",
+    "            self.launch_parallel_production(parallel_tasks=parallel_tasks)\n",
+    "\n",
+    "\n",
+    "    def launch_parallel_production(self,parallel_tasks : int = 10):\n",
+    "        \n",
     "        self.check_for_todo()\n",
+    "        \n",
+    "        fan_id = fan_id_generator()\n",
+    "        blotch_id = blotch_id_generator()\n",
     "\n",
-    "        # perform the clustering\n",
-    "        if len(self.todo) > 0:\n",
-    "            LOGGER.info(\"Performing the clustering.\")\n",
-    "            print(\"Should Log before\")\n",
-    "            results = cluster_obsid_parallel(self.todo, self.catalog, self.dbname)\n",
+    "        #Simple trick to start too many tasks at the same time which all load a large DB.\n",
+    "        total = len(self.todo)\n",
+    "        #adding 1 to the loop amount is important to finish up the leftovers that dont fit in total/n_workers\n",
+    "        # Example total = 10; n_workers = 3 => 10/3 = 3 meaning 3 loops until 0:3, 3:6, 6:9 , missing the last one 10\n",
+    "        if total%parallel_tasks == 0:\n",
+    "            loop_full = int(total/parallel_tasks)\n",
+    "        else:\n",
+    "            loop_full = int(np.floor(total/parallel_tasks)) + 1 \n",
+    "        \n",
+    "        for i in range(loop_full):\n",
+    "            try: \n",
+    "                temp_obsids = self.obsids[parallel_tasks*i:parallel_tasks*i+parallel_tasks]\n",
+    "            except:\n",
+    "                temp_obsids = self.obsids[parallel_tasks*i:]\n",
     "\n",
-    "            # create marking_ids\n",
-    "            fan_id = fan_id_generator()\n",
-    "            blotch_id = blotch_id_generator()\n",
-    "            for obsid in self.todo:\n",
+    "            LOGGER.info(f\"Performing the Clustering for batch {i}\")\n",
+    "            _ = cluster_obsid_parallel(temp_obsids, self.catalog, self.dbname)\n",
+    "\n",
+    "            for obsid in temp_obsids:\n",
     "                paths = get_L1A_paths(obsid, self.catalog)\n",
     "                for path in paths:\n",
     "                    add_marking_ids(path, fan_id, blotch_id)\n",
-    "\n",
+    "            \n",
     "            # fnotch and apply cuts\n",
     "            LOGGER.info(\"Start fnotching\")\n",
-    "            results = fnotch_obsid_parallel(self.todo, self.catalog)\n",
+    "            _ = fnotch_obsid_parallel(temp_obsids, self.catalog)\n",
+    "\n",
+    "            LOGGER.info(\"Creating the required RED45 mosaics for ground projections.\")\n",
+    "            _ = execute_in_parallel(create_RED45_mosaic, temp_obsids)\n",
+    "\n",
     "\n",
     "        # create summary CSV files of the clustering output\n",
     "        LOGGER.info(\"Creating L1C fan and blotch database files.\")\n",
     "        create_roi_file(self.obsids, self.catalog, self.catalog)\n",
-    "\n",
-    "        LOGGER.info(\"Creating the required RED45 mosaics for ground projections.\")\n",
-    "        for i in range(loop_full):\n",
-    "            try: \n",
-    "                temp_obsids = self.obsids[max_tasks*i:max_tasks*i+max_tasks]\n",
-    "            except:\n",
-    "                temp_obsids = self.obsids[max_tasks*i:]\n",
-    "            _ = execute_in_parallel(create_RED45_mosaic, temp_obsids)\n",
     "\n",
     "        LOGGER.info(\"Calculating the center ground coordinates for all P4 tiles.\")\n",
     "        self.calc_tile_coordinates()\n",
@@ -753,14 +770,6 @@
     "        self.calc_metadata()\n",
     "        # merging metadata\n",
     "        self.merge_all()\n",
-    "    \n",
-    "    def launch_parallel_production(self,parallel_tasks : int = 10):\n",
-    "        \n",
-    "        self.check_for_todo()\n",
-    "        \n",
-    "        fan_id = fan_id_generator()\n",
-    "        blotch_id = blotch_id_generator()\n",
-    "\n",
     "\n",
     "    \n",
     "    def launch_serial_production(self):\n",
