added single obsid production

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -777,8 +777,6 @@
     "        \"\"\"\n",
     "        self.check_for_todo()\n",
     "\n",
-    "        \n",
-    "\n",
     "        fan_id = fan_id_generator()\n",
     "        blotch_id = blotch_id_generator()\n",
     "\n",
@@ -814,7 +812,34 @@
     "        LOGGER.info(\"Writing summary metadata file.\")\n",
     "        self.calc_metadata()\n",
     "        # merging metadata\n",
-    "        self.merge_all()"
+    "        self.merge_all()\n",
+    "\n",
+    "    def produce_single_obsid(self, obsid:str):\n",
+    "        \"\"\"Clusters and creates all obsid data without merging \n",
+    "           as this should only be done on the full catalog. This\n",
+    "           is meant for repairing single obsids\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        obsid : str\n",
+    "            One Singular obsid\n",
+    "        \"\"\"\n",
+    "\n",
+    "        fan_id = fan_id_generator()\n",
+    "        blotch_id = blotch_id_generator()\n",
+    "\n",
+    "        cluster_obsid(obsid,self.catalog,dbname=self.dbname)\n",
+    "\n",
+    "        paths = get_L1A_paths(obsid, self.catalog)\n",
+    "        for path in paths:\n",
+    "            add_marking_ids(path, fan_id, blotch_id)\n",
+    "\n",
+    "        LOGGER.info(f\"Start fnotching for {obsid}\")\n",
+    "        fnotch_obsid(obsid,savedir=self.catalog)\n",
+    "\n",
+    "        create_RED45_mosaic(obsid)\n",
+    "        self.mark_done(obsid)\n",
+    "\n"
    ]
   },
   {
